* SearchEngine: support only FTI queries (TrivialDev)
* Search: index project tags and use them for search (Roland Mas)
* Search: provide language-specific settings for better indexation/search (Roland Mas)
* Site Admin: add paging system in userlist page [#799] (TrivialDev)
* Site Admin: support widgets for forge home page (TrivialDev)
* Spellcheck (Anders Jonsson)
* Taskboard: support multiple taskboards per project [#785] (TrivialDev)
* Taskboard: support filtering tasks [#786] (TrivialDev)
* Tracker: keep values in artifact new submit form on error. (TrivialDev)
* Tracker: add new extrafield: text regex (TrivialDev)
* Tracker: add new extrafield: User (TrivialDev)
* Tracker: add support for mandatory fields on workflow of artifact (TrivialDev)
* Tracker: add support for description on extrafield to be used in tooltip (TrivialDev)
* Tracker: fix extrafield cloning when not using default template fusionforge project [#829] (TrivialDev)
* Tracker: add support for autoassign [#151] & [#149] (TrivialDev)
* Tracker: add default value support for extrafields (TrivialDev)
* Utils: cross ref document/release. Use [DNNN]/[RNNN] where NNN is the ID of the document/frs release. (TrivialDev)
* Web UI: upgrade splitter jquery plugin to 0.20.0 (TrivialDev)
* Web UI: upgrade jquery ui to 1.12.1 (TrivialDev)
* Web UI: upgrade jquery to 1.12.4 (Nokia)
* Widget MySystasks: new widget for user to display systasks perform on user projects (TrivialDev)
* Widget ProjectScmStats: new widget for project to display SCM stats (TrivialDev)

FusionForge 6.0.5:
* Plugin SCM SVN: fix activity when SVN repository is private [#813] (TrivialDev)
* Plugin SCM SVN: fix support old svn clients (Inria)
* Plugin SCM Git: fix activity when Git repository is private [#825] (TrivialDev)
* Plugin MoinMoin: fix httpd permissions & 404 on CentOS [#809] (TrivialDev)
* Project Task: fix CSV import [#823] (Peter Katzmann)