@@ -22,6 +22,7 @@ FusionForge 6.X:
 * Search: provide language-specific settings for better indexation/search (Roland Mas)
 * Site Admin: add paging system in userlist page [#799] (TrivialDev)
 * Site Admin: support widgets for forge home page (TrivialDev)
+* Soap: getArtifacts tracker function: support changed_from parameter (TrivialDev)
 * Spellcheck (Anders Jonsson)
 * Taskboard: support multiple taskboards per project [#785] (TrivialDev)
 * Taskboard: support filtering tasks [#786] (TrivialDev)
